--- a/styles/Animals.module.css
+++ b/styles/Animals.module.css
@@ -33,9 +33,101 @@
 .animalSection {
     display: flex;
     align-items: center;
+    justify-content: start;
     height: 30rem;
+
+    padding: 3rem;
+    overflow: auto;
+}
+
+.animalDetails {
+    display: flex;
+    height: 40rem;
+}
+
+.biology {
+    display: flex;
+    flex-direction: column;
+    background-color:rgba(15, 15, 15, 0.2);
+}
+
+.biology h1 {
+    margin-left: 1rem;
+    margin-bottom: 0rem;;
+}
+
+.biology p {
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+    color: gray;
+    font-size: 1.1rem;
+}
+
+.bioInfo {
+    display: flex;
     padding: 1rem;
-    overflow-x: auto;
+}
+
+.bioInfo img {
+    height: 300px;
+    width: 300px;
+}
+
+.infoCard {
+    padding: 1rem;
+    margin-left: 1rem;
+    background-color: rgba(15, 15, 15, 0.2);
+}
+
+.infoCard p {
+    font-size:1.3rem;
+}
+
+.infoGrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    padding: 1rem;
+}
+
+.grid1 {
+    grid-column: 1/ span 1;
+    grid-row: 1/ 1; 
+    background-color: rgba(15, 15, 15, 0.2);
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.grid3 {
+    grid-column: 3/ span 1;
+    grid-row: 1/ 1; 
+    background-color: rgba(15, 15, 15, 0.2);
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.grid5 {
+    grid-column: 2/ span 1;
+    grid-row: 2/ 2; 
+    background-color: rgba(15, 15, 15, 0.2);
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.grid7 {
+    grid-column: 1/ span 1;
+    grid-row: 3/ 3; 
+    background-color: rgba(15, 15, 15, 0.2);
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.grid9 {
+    grid-column: 3/ span 1;
+    grid-row: 3/ 3; 
+    background-color: rgba(15, 15, 15, 0.2);
+    padding: 1rem;
+    margin: 1rem;
 }
 
 .card {
@@ -44,6 +136,14 @@
     align-items: center;
     margin: 1rem;
     width: 220px;
+}
+
+.card :hover {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem;
+    width: 225px;
 }
 
 .card a{
@@ -56,11 +156,17 @@
     padding: 1rem 1.5rem;
 }
 
+.card h3 {
+    margin-bottom: 1rem;
+}
+
 .card p {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
+    margin-top: 0rem;
+    color: gray;
 }
 
 .card img{
@@ -68,3 +174,10 @@
     width: 200px;
     border-radius: 50%;
 }
+
+@media only screen and (max-width: 750px) {
+    .infoGrid {
+      display: flex;
+      flex-direction: column
+    }
+  }
