--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -100,6 +100,17 @@
   padding: 1rem 1.5rem;
 }
 
+.cardFront a{
+  background-color:rgba(15, 15, 15, 0.623);
+  text-decoration: none;
+  border: none;
+  font-size: 1.2rem;
+  color: white;
+  width: 150px;
+  padding: 1rem 1.5rem;
+  text-align: center;
+}
+
 .cardFront p {
   display: flex;
   justify-content: center;
