--- a/styles/Control.module.css
+++ b/styles/Control.module.css
@@ -6,11 +6,67 @@
 
 .controlCards {
     display: flex;
-    overflow-x: scroll;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.bioControlSection {
-    display:flex;
-    flex-direction: column;
-    padding: 2rem;
+.controlInfo {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 }
+
+.controlVideo {
+    grid-column: 1/ span 4;
+    grid-row: 1/ 1; 
+    background-color: rgba(15, 15, 15, 0.2);
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.controlDesc {
+    grid-column: 5/ span 2;
+    grid-row: 1 / 1;
+    background-color: rgba(15, 15, 15, 0.2);
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.middleGrid {
+    grid-column: 1/ span 6;
+    grid-row: 2/ 2;
+    background-color: rgba(15, 15, 15, 0.2);
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.middleGrid {
+    grid-column: 1/ span 6;
+    grid-row: 2/ 2;
+    background-color: rgba(15, 15, 15, 0.2);
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.leftGrid {
+    grid-column: 1/ span 3;
+    grid-row: 3/ 3;
+    background-color: rgba(15, 15, 15, 0.2);
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.rightGrid {
+    grid-column: 4/ span 3;
+    grid-row: 3/ 3;
+    background-color: rgba(15, 15, 15, 0.2);
+    padding: 1rem;
+    margin: 1rem;
+}
+
+@media only screen and (max-width: 750px) {
+    .controlInfo {
+      display: flex;
+      flex-direction: column
+    }
+  }
