changed nav bar color to gray

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,9 +19,9 @@
 }
 
 .nav a {
-  font-size: 1.5rem;
+  font-size: 1rem;
   padding: 1rem;
-  color: white;
+  color: gray;
 }
 
 .nav a:hover {
@@ -117,7 +117,6 @@
     padding: 2rem;
     margin: 1rem;
     justify-content: flex-end;
-    align-items: center;
 }
 
 .impactCard img {
