--- a/styles/Animals.module.css
+++ b/styles/Animals.module.css
@@ -30,35 +30,31 @@
     padding: 1rem 1.5rem
 }
 
-.animalSection {
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    height: 30rem;
-
-    padding: 3rem;
-    overflow: auto;
-}
-
 .animalDetails {
     display: flex;
     height: 40rem;
 }
 
-.biology {
+.biologyCard {
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
     background-color:rgba(167, 121, 68, 0.363);
-    width:200px
+    padding: 1rem;
 }
 
-.biology h1 {
+.biologyCard h1 {
     margin-left: 1rem;
     margin-bottom: 0rem;
     color:rgb(85, 85, 85);
 }
 
-.biology p {
+
+.biologyCard img {
+    border-radius: 10px;
+}
+
+.biologyCard p {
     margin-left: 1rem;
     margin-top: 0.5rem;
     color: gray;
@@ -93,6 +89,12 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     padding: 1rem;
+    overflow: auto;
+}
+
+.infoGrid img {
+    height: 350px;
+    width: 550px;
 }
 
 .grid1 {
@@ -100,6 +102,14 @@
     grid-row: 1/ 1; 
     background-color: rgba(167, 121, 68, 0.363);
     padding: 1rem;
+    margin: 1rem;
+    color:rgb(85, 85, 85);
+    font-size: 1.2rem;
+}
+
+.grid2 {
+    grid-column: 2/ span 1;
+    grid-row: 1/ 1; 
     margin: 1rem;
     color:rgb(85, 85, 85);
     font-size: 1.2rem;
@@ -115,11 +125,27 @@
     font-size: 1.2rem;
 }
 
+.grid4 {
+    grid-column: 1/ span 1;
+    grid-row: 2/ 2; 
+    margin: 1rem;
+    color:rgb(85, 85, 85);
+    font-size: 1.2rem;
+}
+
 .grid5 {
     grid-column: 2/ span 1;
     grid-row: 2/ 2; 
     background-color: rgba(167, 121, 68, 0.363);
     padding: 1rem;
+    margin: 1rem;
+    color:rgb(85, 85, 85);
+    font-size: 1.2rem;
+}
+
+.grid6 {
+    grid-column: 3/ span 1;
+    grid-row: 2/ 2; 
     margin: 1rem;
     color:rgb(85, 85, 85);
     font-size: 1.2rem;
@@ -135,6 +161,15 @@
     font-size: 1.2rem;
 }
 
+.grid8 {
+    grid-column: 2/ span 1;
+    grid-row: 3/ 3; 
+    margin: 1rem;
+    color:rgb(85, 85, 85);
+    font-size: 1.2rem;
+}
+
+
 .grid9 {
     grid-column: 3/ span 1;
     grid-row: 3/ 3; 
@@ -145,49 +180,56 @@
     font-size: 1.2rem;
 }
 
-.card {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 1rem;
-    width: 220px;
-}
-
-.card :hover {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 1rem;
-    width: 225px;
-}
-
-.card a{
-    background-color:rgba(15, 15, 15, 0.623);
-    text-decoration: none;
-    border: none;
-    font-size: 1.2rem;
-    color: white;
-    width: 150px;
-    padding: 1rem 1.5rem;
-}
-
-.card h3 {
-    margin-bottom: 1rem;
-}
-
-.card p {
+.animalImpactSection {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    margin-top: 0rem;
-    color: gray;
+    padding: 2rem;
+    justify-content: space-between;
+    overflow-x: auto;
 }
 
-.card img{
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
+.animalImpactCard {
+    background-color: white;
+    border-radius: 0.25rem;
+    box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    margin: 1rem;
+}
+
+.animalImpactCard img {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    height: 250px;
+    filter: contrast(60%);
+    transition: filter 0.5s cubic-bezier(.43,.41,.22,.91);
+}
+
+.animalImpactCard img:hover {
+    filter: contrast(100%);
+}
+
+.animalImpactTitle {
+    padding-left: 1rem;
+    padding-top: 1rem;
+    color: gray;
+    font-size: 1.25rem;
+    font-weight: 300;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+.animalImpactCard p {
+    padding: 1rem;
+    color: gray;
+    font-size: 1.1rem;
+}
+
+.controlSection {
+    display:flex;
 }
 
 @media only screen and (max-width: 750px) {
