--- a/styles/Control.module.css
+++ b/styles/Control.module.css
@@ -10,58 +10,26 @@
     justify-content: center;
 }
 
-.controlInfo {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+.controlCard img{
+    height:400px;
+    width: 400px;
+    object-fit: cover;
+    position: absolute;
+    left: 20px;
+    bottom: 50px;
+    box-shadow: 0 .2em 1.2em hsla(20, 20, 20, 10%);
 }
 
-.controlVideo {
-    grid-column: 1/ span 4;
-    grid-row: 1/ 1; 
-    background-color: rgba(15, 15, 15, 0.2);
-    padding: 1rem;
-    margin: 1rem;
+.controlCardContainer {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.controlDesc {
-    grid-column: 5/ span 2;
-    grid-row: 1 / 1;
-    background-color: rgba(15, 15, 15, 0.2);
-    padding: 1rem;
-    margin: 1rem;
-}
-
-.middleGrid {
-    grid-column: 1/ span 6;
-    grid-row: 2/ 2;
-    background-color: rgba(15, 15, 15, 0.2);
-    padding: 1rem;
-    margin: 1rem;
-}
-
-.middleGrid {
-    grid-column: 1/ span 6;
-    grid-row: 2/ 2;
-    background-color: rgba(15, 15, 15, 0.2);
-    padding: 1rem;
-    margin: 1rem;
-}
-
-.leftGrid {
-    grid-column: 1/ span 3;
-    grid-row: 3/ 3;
-    background-color: rgba(15, 15, 15, 0.2);
-    padding: 1rem;
-    margin: 1rem;
-}
-
-.rightGrid {
-    grid-column: 4/ span 3;
-    grid-row: 3/ 3;
-    background-color: rgba(15, 15, 15, 0.2);
-    padding: 1rem;
-    margin: 1rem;
+.controlCardInfo {
+    width: 50%;
+    
 }
 
 @media only screen and (max-width: 750px) {
