--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("/hero.jpg");
+  background-image: url("/photo-1.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
 }
