--- a/styles/Desc.module.scss
+++ b/styles/Desc.module.scss
@@ -12,6 +12,8 @@ html {
 .hero {
   visibility: hidden;
   height: 100vh;
+  background-color: rgba(167, 121, 68, 0.363);
+  margin-top: 1rem;
   .container {
     width: 1440px;
     min-width: 1440px;
