--- a/styles/Control.module.css
+++ b/styles/Control.module.css
@@ -1,3 +1,9 @@
+.backButton {
+    font-size: 1.5rem;
+    padding: 1rem;
+    margin-top:1rem;
+}
+
 .controlHero {
     display: flex;
     background-image: url('/controlHero.jpeg');
@@ -6,6 +12,7 @@
     background-size: cover;
     justify-content: center;
     align-items: center;
+    margin-bottom: 1rem;
 }
 
 .controlHeroInfo {
