--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,7 +13,7 @@
   padding: 0.5rem 1rem;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(0, 0, 0, 0.349);
   height: 6rem;
   width: 100%;
 }
@@ -21,7 +21,7 @@
 .nav a {
   font-size: 1rem;
   padding: 1rem;
-  color: rgb(190, 190, 190);
+  color: rgb(255, 255, 255);
 }
 
 .nav a:hover {
@@ -139,6 +139,18 @@
 
 .impactCard:hover {
   background-color: rgb(221, 221, 221);
+}
+
+.footer {
+  display: flex;
+  height: 300px;
+  background-color: rgba(167, 121, 68, 0.363);
+  padding: 2rem;
+  align-items: center;
+}
+
+.footer img {
+  height: 100px;
 }
 
 /* .cardFront {
