--- a/styles/Desc.module.scss
+++ b/styles/Desc.module.scss
@@ -39,6 +39,8 @@ html {
               height: 44px;
               overflow: hidden;
               .herocontentlineinner {
+                font-size: larger;
+                color: black;
               }
             }
           }
@@ -56,7 +58,7 @@ html {
               content: "";
               width: 56px;
               height: 1px;
-              background: #dfdfdf;
+              background: #338622;
               top: 50%;
               left: -68px;
             }
@@ -101,35 +103,388 @@ html {
             position: absolute;
             overflow: hidden;
             &.pig {
-              top: 20px;
-              right: 50px;
-              width: 40%;
-              height: 40%;
+              position: relative;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              width: 200px;
+              height: 200px;
+              top: 40px;
+              right: 0px;
+              left: 400px;
+
+              border-radius: 50%;
+              background-image: url("https://i.loli.net/2021/04/24/kbj9c34ToDH5m6G.jpg");
+              background-size: cover;
+              transition: ease-in-out 0.3s;
+
+              z-index: 2;
+              &:before {
+                content: " ";
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                margin: auto;
+
+                background: inherit;
+                background-position: bottom;
+                filter: blur(40px) saturate(0%);
+                transform: scaleX(0.4);
+                transition: ease-in-out 0.4s;
+                border-radius: 120px;
+                transform-origin: right;
+                opacity: 0;
+
+                z-index: -1;
+              }
+              .containerInfo {
+                position: relative;
+
+                line-height: 1.8;
+                transition: ease-in-out 0.3s;
+                opacity: 0;
+              }
+              .containerLocation {
+                transition-delay: 0.15s;
+              }
+
+              &:hover {
+                border-radius: 0;
+                width: 300px;
+                height: 200px;
+
+                box-shadow: 0px 0px 1px rgba(236, 233, 233, 0.04),
+                  0px 2px 6px rgba(238, 241, 241, 0.08),
+                  0px 16px 24px rgba(239, 243, 242, 0.1),
+                  0px 24px 32px rgba(234, 236, 236, 0.14);
+                &:before {
+                  width: 100%;
+
+                  opacity: 0.18;
+                  filter: blur(10px) saturate(100%);
+                  transform: scale(2.8) translate3d(-18%, 0px, 0px);
+                }
+
+                .containerInfo {
+                  transform: translate3d(30%, 0px, 0px);
+                  opacity: 1;
+                  color: #dfdfdf;
+                  left: 30px;
+                  font-size: x-large;
+                }
+              }
             }
+
             &.fox {
-              top: 20px;
+              position: relative;
+              display: flex;
+
+              flex-direction: column;
+              justify-content: center;
+              width: 200px;
+              height: 200px;
+              top: -170px;
               left: 0px;
-              width: 40%;
-              height: 40%;
+
+              border-radius: 50%;
+              background-image: url("https://i.loli.net/2021/04/24/GnCaNXQLYbrT59F.jpg");
+              background-size: cover;
+              transition: ease-in-out 0.3s;
+
+              z-index: 2;
+              &:before {
+                content: " ";
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                margin: auto;
+
+                background: inherit;
+                background-position: bottom;
+                filter: blur(40px) saturate(0%);
+                transform: scaleX(0.4);
+                transition: ease-in-out 0.4s;
+                border-radius: 120px;
+                transform-origin: right;
+                opacity: 0;
+
+                z-index: -1;
+              }
+              .containerInfo {
+                position: relative;
+
+                line-height: 1.8;
+                transition: ease-in-out 0.3s;
+                opacity: 0;
+              }
+              .containerLocation {
+                transition-delay: 0.15s;
+              }
+
+              &:hover {
+                border-radius: 0;
+                width: 300px;
+                height: 200px;
+
+                box-shadow: 0px 0px 1px rgba(236, 233, 233, 0.04),
+                  0px 2px 6px rgba(238, 241, 241, 0.08),
+                  0px 16px 24px rgba(239, 243, 242, 0.1),
+                  0px 24px 32px rgba(234, 236, 236, 0.14);
+                &:before {
+                  width: 100%;
+
+                  opacity: 0.18;
+                  filter: blur(10px) saturate(100%);
+                  transform: scale(2.8) translate3d(-18%, 0px, 0px);
+                }
+
+                .containerInfo {
+                  transform: translate3d(30%, 0px, 0px);
+                  opacity: 1;
+                  color: #dfdfdf;
+                  left: 200px;
+                  font-size: x-large;
+                }
+              }
             }
+
             &.rabbit {
-              top: 240px;
+              position: relative;
+              display: flex;
+
+              flex-direction: column;
+              justify-content: center;
+              width: 200px;
+              height: 200px;
+              top: -140px;
               left: 200px;
-              width: 40%;
-              height: 40%;
+
+              border-radius: 50%;
+              background-image: url("https://i.loli.net/2021/04/24/7xEoF2qybnSHjMr.jpg");
+              background-size: cover;
+              transition: ease-in-out 0.3s;
+
+              z-index: 2;
+              &:before {
+                content: " ";
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                margin: auto;
+
+                background: inherit;
+                background-position: bottom;
+                filter: blur(40px) saturate(0%);
+                transform: scaleX(0.4);
+                transition: ease-in-out 0.4s;
+                border-radius: 120px;
+                transform-origin: right;
+                opacity: 0;
+
+                z-index: -1;
+              }
+              .containerInfo {
+                position: relative;
+
+                line-height: 1.8;
+                transition: ease-in-out 0.3s;
+                opacity: 0;
+              }
+              .containerLocation {
+                transition-delay: 0.15s;
+              }
+
+              &:hover {
+                border-radius: 0;
+                width: 300px;
+                height: 200px;
+
+                box-shadow: 0px 0px 1px rgba(236, 233, 233, 0.04),
+                  0px 2px 6px rgba(238, 241, 241, 0.08),
+                  0px 16px 24px rgba(239, 243, 242, 0.1),
+                  0px 24px 32px rgba(234, 236, 236, 0.14);
+                &:before {
+                  width: 100%;
+
+                  opacity: 0.18;
+                  filter: blur(10px) saturate(100%);
+                  transform: scale(2.8) translate3d(-18%, 0px, 0px);
+                }
+
+                .containerInfo {
+                  transform: translate3d(30%, 0px, 0px);
+                  opacity: 1;
+                  color: #dfdfdf;
+                  left: 30px;
+                  bottom: 10px;
+                  font-size: x-large;
+                }
+              }
             }
+
             &.goat {
-              top: 420px;
+              position: relative;
+              display: flex;
+
+              flex-direction: column;
+              justify-content: center;
+              width: 200px;
+              height: 200px;
+              top: -120px;
               left: 0px;
-              width: 40%;
-              height: 40%;
+
+              border-radius: 50%;
+              background-image: url("https://i.loli.net/2021/04/24/RhJlHYuIZOwM5qD.jpg");
+              background-size: cover;
+              transition: ease-in-out 0.3s;
+
+              z-index: 2;
+              &:before {
+                content: " ";
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                margin: auto;
+
+                background: inherit;
+                background-position: bottom;
+                filter: blur(40px) saturate(0%);
+                transform: scaleX(0.4);
+                transition: ease-in-out 0.4s;
+                border-radius: 120px;
+                transform-origin: right;
+                opacity: 0;
+
+                z-index: -1;
+              }
+              .containerInfo {
+                position: relative;
+
+                line-height: 1.8;
+                transition: ease-in-out 0.3s;
+                opacity: 0;
+              }
+              .containerLocation {
+                transition-delay: 0.15s;
+              }
+
+              &:hover {
+                border-radius: 0;
+                width: 300px;
+                height: 200px;
+
+                box-shadow: 0px 0px 1px rgba(236, 233, 233, 0.04),
+                  0px 2px 6px rgba(238, 241, 241, 0.08),
+                  0px 16px 24px rgba(239, 243, 242, 0.1),
+                  0px 24px 32px rgba(234, 236, 236, 0.14);
+                &:before {
+                  width: 100%;
+
+                  opacity: 0.18;
+                  filter: blur(10px) saturate(100%);
+                  transform: scale(2.8) translate3d(-18%, 0px, 0px);
+                }
+
+                .containerInfo {
+                  transform: translate3d(30%, 0px, 0px);
+                  opacity: 1;
+                  color: #fdfdfa;
+                  left: 150px;
+                  bottom: 80px;
+                  font-size: x-large;
+                }
+              }
             }
+
             &.dog {
-              top: 420px;
+              position: relative;
+              display: flex;
+
+              flex-direction: column;
+              justify-content: center;
+              width: 200px;
+              height: 200px;
+              top: -300px;
               right: 50px;
-              width: 40%;
-              height: 40%;
+              left: 400px;
+
+              border-radius: 50%;
+              background-image: url("https://i.loli.net/2021/04/24/foi7WlaLAv62sx3.jpg");
+              background-size: cover;
+              transition: ease-in-out 0.3s;
+
+              z-index: 2;
+              &:before {
+                content: " ";
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                margin: auto;
+
+                background: inherit;
+                background-position: bottom;
+                filter: blur(40px) saturate(0%);
+                transform: scaleX(0.4);
+                transition: ease-in-out 0.4s;
+                border-radius: 120px;
+                transform-origin: right;
+                opacity: 0;
+
+                z-index: -1;
+              }
+              .containerInfo {
+                position: relative;
+
+                line-height: 1.8;
+                transition: ease-in-out 0.3s;
+                opacity: 0;
+              }
+              .containerLocation {
+                transition-delay: 0.15s;
+              }
+
+              &:hover {
+                border-radius: 0;
+                width: 300px;
+                height: 200px;
+
+                box-shadow: 0px 0px 1px rgba(236, 233, 233, 0.04),
+                  0px 2px 6px rgba(238, 241, 241, 0.08),
+                  0px 16px 24px rgba(239, 243, 242, 0.1),
+                  0px 24px 32px rgba(234, 236, 236, 0.14);
+                &:before {
+                  width: 100%;
+
+                  opacity: 0.18;
+                  filter: blur(10px) saturate(100%);
+                  transform: scale(2.8) translate3d(-18%, 0px, 0px);
+                }
+
+                .containerInfo {
+                  transform: translate3d(30%, 0px, 0px);
+                  opacity: 1;
+                  color: #dfdfdf;
+                  left: 30px;
+                  font-size: x-large;
+                }
+              }
             }
+
             img {
               position: absolute;
               top: 0;
