--- a/styles/Regulation.module.scss
+++ b/styles/Regulation.module.scss
@@ -1,13 +1,18 @@
 // html {
-//   background: #f5f7f8;
-//   font-family: system-ui;
-//   -webkit-font-smoothing: antialiased;
-//   padding: 20px 0;
+//   body {
+//     background: #f5f7f8;
+//     font-family: system-ui;
+//     -webkit-font-smoothing: antialiased;
+//     padding: 20px 0;
+//   }
 // }
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap");
+
 .regulationHero {
   display: flex;
   background-image: url("https://i.loli.net/2021/04/25/aLhwGBYsoRIkpyf.jpg");
-  height: 50rem;
+  height: 46rem;
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -15,7 +20,7 @@
   align-items: center;
   margin-bottom: 1rem;
 }
-.regulationHeroInfo {
+.regulationHeroInfo1 {
   height: 50px;
   background-color: rgba(109, 109, 109, 0.589);
   position: relative;
@@ -24,6 +29,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Oswald", sans-serif;
+  font-size: xxx-large;
+}
+.regulationHeroInfo {
+  height: 70px;
+  background-color: rgba(109, 109, 109, 0.589);
+  position: relative;
+  width: 700px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: large;
+  font-style: italic;
 }
 
 .header {
