--- a/styles/Regulation.module.scss
+++ b/styles/Regulation.module.scss
@@ -31,6 +31,7 @@
   align-items: center;
   font-family: "Oswald", sans-serif;
   font-size: xxx-large;
+  font-style: inherit;
 }
 .regulationHeroInfo {
   height: 70px;
