draft version of animal welfare

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -143,10 +143,11 @@
 
 .footer {
   display: flex;
-  height: 300px;
+  height: 100px;
   background-color: rgba(167, 121, 68, 0.363);
   padding: 2rem;
   align-items: center;
+  justify-content: space-around;
 }
 
 .footer img {
