update regulation section of Homepage

--- a/styles/Desc.module.scss
+++ b/styles/Desc.module.scss
@@ -58,7 +58,7 @@ html {
               content: "";
               width: 56px;
               height: 1px;
-              background: #338622;
+              background: #1e1f1e;
               top: 50%;
               left: -68px;
             }
