update regulation section

--- a/styles/RegulationSection.module.scss
+++ b/styles/RegulationSection.module.scss
@@ -107,7 +107,7 @@ $slide-width: 30rem;
     align-items: center;
     background: rgba(black, 0.5);
     color: white;
-    content: "read more";
+    content: " "; // Read More
     display: flex;
     height: 100%;
     justify-content: center;
