--- a/styles/Control.module.css
+++ b/styles/Control.module.css
@@ -78,6 +78,13 @@
   justify-content: center;
 }
 
+.conventionalText {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+}
+
 .conventionalInfo {
   display: flex;
   flex-direction: column;
