update the footer abd regulation section

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -144,8 +144,8 @@
 .footer {
   display: flex;
   height: 100px;
-  background-color: rgba(167, 121, 68, 0.363);
-  padding: 2rem;
+  background-color: black;
+  padding: 4.7rem;
   align-items: center;
   justify-content: space-around;
 }
