--- a/styles/RegulationSection.module.scss
+++ b/styles/RegulationSection.module.scss
@@ -7,6 +7,7 @@ $slide-width: 30rem;
   font-family: "Oswald", sans-serif;
   font-size: xx-large;
   margin-bottom: 35px;
+  margin-top: 20px;
 }
 
 .html {
@@ -47,10 +48,11 @@ $slide-width: 30rem;
   flex: 1;
   justify-content: center;
   position: relative;
-  width: 80%;
+  width: 100%;
   height: 50%;
   left: 50%;
   transform: translateX(-50%);
+  background-color: rgba(167, 121, 68, 0.363);
 }
 
 .carouselinner {
@@ -189,7 +191,7 @@ $slide-width: 30rem;
 .carouseldots {
   display: inline-block;
   left: 50%;
-  margin-top: -10rem;
+  margin-top: -11.5rem;
   position: absolute;
   transform: translateX(-50%);
 
