--- a/styles/Text.module.css
+++ b/styles/Text.module.css
@@ -34,22 +34,20 @@
   }
 }
 
-.di::before {
+.before {
   content: attr(title);
   position: absolute;
   left: 0;
-}
-.div::after {
-  content: attr(title);
-  position: absolute;
-  left: 0;
-}
-
-.divbbb {
   animation: glitchTop 1s linear infinite;
   clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
 }
+
+/* .divbbb {
+  animation: glitchTop 1s linear infinite;
+  clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+} */
 
 @keyframes glitchTop {
   2%,
@@ -65,7 +63,15 @@
   }
 }
 
-.divaa {
+/* .divaa {
+  animation: glitchBotom 1.5s linear infinite;
+  clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+} */
+.after {
+  content: attr(title);
+  position: absolute;
+  left: 0;
   animation: glitchBotom 1.5s linear infinite;
   clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
   -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
