--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -27,7 +27,8 @@
   box-shadow: 0 5px 15px #193047;
   border-radius: 4px;
   margin-left: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  margin-top: 20px;
 }
 
 .button:hover {
