--- a/styles/RegulationSection.module.scss
+++ b/styles/RegulationSection.module.scss
@@ -59,14 +59,15 @@ $slide-width: 30rem;
   //--------------------------------------------------------------------------------------
   height: 49rem;
   position: relative;
-  width: calc(#{30rem * 3});
+  width: calc(#{27rem * 3});
 }
 
 .carouselcontainer {
-  height: 100%;
+  height: 30rem; /////////////////////////////////////////////////////////////////////////carddddd
   overflow: hidden;
   position: relative;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .carouselslidelist {
@@ -94,7 +95,7 @@ $slide-width: 30rem;
 .carouselslideitemimglink {
   cursor: zoom-in;
   display: flex;
-  height: 100%;
+  height: 80%; //00000000000000000000000000000000000000000000000000
   overflow: hidden;
   position: relative;
   width: 100%;
@@ -132,15 +133,15 @@ $slide-width: 30rem;
 }
 
 .carouselslideitembody {
-  bottom: -2.5rem;
+  bottom: 2rem; //--------------------------------change the title and text
   height: 10%;
   position: absolute;
 
   .h4 {
-    margin: 0.7rem 0 0;
+    margin: 0.8rem 0 0;
     text-transform: uppercase;
     font-style: bold;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
 
   .p {
@@ -158,40 +159,38 @@ $slide-width: 30rem;
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 50%;
+  top: 60%;
   transform: translateY(-50%);
 
-  &--prev {
-    left: -10rem;
+  &prev {
+    left: -6rem;
   }
 
-  &--next {
-    right: -10rem;
+  &next {
+    right: -6rem;
   }
 }
 
 .carouselbtnarrow {
   border: solid black;
   border-width: 0 0.4rem 0.4rem 0;
-  height: 6rem;
-  width: 6rem;
+  height: 4rem;
+  width: 4rem;
   z-index: 10;
 
   &left {
     transform: rotate(135deg);
-    margin-left: -60px;
   }
 
   &right {
     transform: rotate(-45deg);
-    margin-left: 1175px;
   }
 }
 
 .carouseldots {
   display: inline-block;
   left: 50%;
-  margin-top: -15rem;
+  margin-top: -1.5rem;
   position: absolute;
   transform: translateX(-50%);
 
