--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -26,8 +26,8 @@
   overflow: hidden;
   box-shadow: 0 5px 15px #193047;
   border-radius: 4px;
-  margin-left: 30px;
-  margin-bottom: 80px;
+  margin-left: 40%;
+  margin-bottom: 60px;
   margin-top: 20px;
 }
 
