--- a/styles/RegulationSection.module.scss
+++ b/styles/RegulationSection.module.scss
@@ -9,6 +9,12 @@ $slide-width: 30rem;
   margin-bottom: 35px;
   margin-top: 30px;
 }
+.text1 {
+  font-family: "Oswald", sans-serif;
+  font-size: large;
+  margin-top: 30px;
+  margin-left: 30%;
+}
 
 .html {
   box-sizing: border-box;
