--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -67,7 +67,7 @@
   background-color: #33353d;
 }
 .copyrighttext {
-  margin: 0;
+  margin-top: 20px;
 }
 @media (max-width: 991px) {
   .site-footer [class^="col-"] {
