--- a/styles/RegulationSection.module.scss
+++ b/styles/RegulationSection.module.scss
@@ -11,7 +11,7 @@ $slide-width: 30rem;
 }
 .text1 {
   font-family: "Oswald", sans-serif;
-  font-size: large;
+  font-size: x-large;
   margin-top: 30px;
   margin-left: 30%;
 }
