--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,6 +1,6 @@
 .sitefooter {
   background-color: #26272b;
-  padding: 45px 0 20px;
+  padding: 0.5rem;
   font-size: 15px;
   line-height: 24px;
   color: #737373;
@@ -22,10 +22,11 @@
 }
 .sitefooter h6 {
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   text-transform: uppercase;
-  margin-top: 5px;
   letter-spacing: 2px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .sitefooter a {
@@ -67,7 +68,8 @@
   background-color: #33353d;
 }
 .copyrighttext {
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 @media (max-width: 991px) {
   .site-footer [class^="col-"] {
