--- a/styles/Text.module.css
+++ b/styles/Text.module.css
@@ -12,7 +12,7 @@
   font-family: "Fira Mono", monospace;
   letter-spacing: 1px;
   margin-bottom: 20px;
-  margin-left: 10px;
+  margin-left: 1%;
   font-size: large;
 }
 
