changed animals page to collapsibles

--- a/styles/Animals.module.css
+++ b/styles/Animals.module.css
@@ -9,6 +9,21 @@
     height: 30rem;
 }
 
+.accordion-item {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    margin:1rem;
+}
+
+.accordion-title {
+    display:flex;
+    padding: 1.5rem;
+    justify-content: space-between;
+    background-color: rgba(167, 121, 68, 0.363);
+    color: rgb(85, 85, 85);
+}
+
 .animalText {
     height: 18rem;
     background-color:rgba(15, 15, 15, 0.4);
@@ -189,3 +204,4 @@
       flex-direction: column
     }
   }
+
