--- a/styles/MapButton.module.scss
+++ b/styles/MapButton.module.scss
@@ -1,50 +1,33 @@
-.body {
-  height: 100vh;
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap");
+.container {
   display: flex;
-  align-items: center;
+  height: 4rem;
+  width: 100%;
+  padding: 0.5rem 1rem;
   justify-content: center;
-  overflow: hidden;
-  font-family: "IBM Plex Sans Condensed", sans-serif;
-  font-weight: 300;
-  background-color: #ecf0f3;
-}
-
-.label {
-  display: inline-flex;
   align-items: center;
-  cursor: pointer;
-  color: #394a56;
+  margin-bottom: 4px;
+  margin-top: 20px;
 }
 
-.labeltext {
-  margin-left: 16px;
-}
-
-.toggle {
-  isolation: isolate;
-  position: relative;
-  height: 30px;
-  width: 60px;
-  border-radius: 15px;
-  overflow: hidden;
-  box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6,
-    4px 4px 4px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset;
-}
-
-.togglestate {
-  display: none;
-}
-
-.indicator {
+.containerMap {
   height: 100%;
-  width: 200%;
-  background: #ecf0f3;
-  border-radius: 15px;
-  transform: translate3d(-75%, 0, 0);
-  transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
-  box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6;
+  overflow: hidden;
+  width: 99.3%;
+  position: center;
+  margin-left: 6px;
 }
 
-.togglestate:checked ~ .indicator {
-  transform: translate3d(25%, 0, 0);
+.title {
+  height: 140px;
+  // background-color: rgba(109, 109, 109, 0.589);
+  position: relative;
+  width: 100%;
+  color: rgb(20, 20, 20);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Oswald", sans-serif;
+  font-size: xx-large;
 }
