--- a/styles/Regulation.module.scss
+++ b/styles/Regulation.module.scss
@@ -30,7 +30,7 @@
   justify-content: center;
   align-items: center;
   font-family: "Oswald", sans-serif;
-  font-size: xxx-large;
+  font-size: xx-large;
   font-style: inherit;
 }
 .regulationHeroInfo {
