--- a/styles/MapButton.module.scss
+++ b/styles/MapButton.module.scss
@@ -1,18 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap");
+//title animation effect
+@import url("https://fonts.googleapis.com/css?family=Fira+Mono:400");
+
 .container {
   display: flex;
-  height: 4rem;
+  height: 3rem;
   width: 100%;
   padding: 0.5rem 1rem;
   justify-content: center;
   align-items: center;
-  margin-bottom: 4px;
-  margin-top: 20px;
+  position: absolute;
+  z-index: 10;
 }
 
 .containerMap {
-  height: 100%;
+  height: 60rem;
   overflow: hidden;
   width: 100%;
   position: center;
@@ -32,7 +35,7 @@
 }
 
 .controlContainer {
-  height: 13rem;
+  height: 11.6rem;
   // overflow: hidden;
   width: 17rem;
   margin-left: 84%;
@@ -47,18 +50,38 @@
 }
 
 .cameraContainer {
-  height: 13rem;
+  height: 12rem;
   // overflow: hidden;
   width: 17rem;
   margin-left: 84%;
   background-color: rgb(244, 248, 248);
   // margin-bottom: 50rem;
   position: absolute;
-  margin-top: 10%;
+  margin-top: 10.8%;
   z-index: 10;
 }
 .cameraItem {
   margin-left: 20px;
   background-color: rgb(244, 248, 248);
   // margin-bottom: 50rem;
+}
+
+// title effect
+
+.body {
+  display: flex;
+  height: 40px;
+  width: 320px;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  background: #0f0f0f;
+  color: rgb(233, 227, 227);
+  font-family: "Fira Mono", monospace;
+  letter-spacing: 1px;
+  margin-bottom: 20px;
+  margin-left: 5px;
+  font-size: normal;
+  position: absolute;
+  z-index: 10;
 }
