--- a/styles/Text.module.css
+++ b/styles/Text.module.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Fira+Mono:400");
 
 .body {
-  display: block;
-  width: 800px;
-  height: 30px;
+  display: flex;
+  width: 150px;
+  height: 60px;
   align-items: center;
   justify-content: center;
   margin: 0;
@@ -13,12 +13,15 @@
   letter-spacing: 1px;
   margin-bottom: 20px;
   margin-left: 1%;
-  font-size: normal;
+  font-size: large;
+  justify-content: center;
 }
 
 .div {
   animation: glitch 0.9s linear infinite;
   width: 300px;
+  position: central;
+  margin-left: 10px;
 }
 
 @keyframes glitch {
