--- a/styles/MapButton.module.scss
+++ b/styles/MapButton.module.scss
@@ -54,11 +54,11 @@
   height: 12rem;
   // overflow: hidden;
   width: 17rem;
-  margin-left: 84%;
+  // margin-left: 84%;
   background-color: rgb(244, 248, 248);
   // margin-bottom: 50rem;
   position: absolute;
-  margin-top: 10.8%;
+
   z-index: 10;
 }
 .cameraItem {
