--- a/styles/Map.module.scss
+++ b/styles/Map.module.scss
@@ -17,7 +17,7 @@
 
 .regulationHeroInfo1 {
   height: 50px;
-  background-color: rgba(109, 109, 109, 0.589);
+  background-color: rgba(196, 210, 216, 0.589);
   position: relative;
   width: 700px;
   color: white;
@@ -30,7 +30,8 @@
 }
 .regulationHeroInfo {
   height: 70px;
-  background-color: rgba(109, 109, 109, 0.589);
+  // background-color: rgba(208, 221, 228, 0.589);
+  background-color: rgba(196, 210, 216, 0.589);
   position: relative;
   width: 700px;
   color: white;
