revamped control page

--- a/styles/ProgramCard.module.scss
+++ b/styles/ProgramCard.module.scss
@@ -22,7 +22,7 @@
   .card1 {
     display: block;
     position: relative;
-    min-width: 262px;
+    width: 262px;
     background-color: #ffb759;
     border-radius: 4px;
     padding: 32px 24px;
