--- a/styles/Control.module.css
+++ b/styles/Control.module.css
@@ -7,7 +7,7 @@
 .controlHero {
   display: flex;
   background-image: url("/controlHero.jpeg");
-  height: 50rem;
+  height: 70rem;
   background-repeat: no-repeat;
   background-size: cover;
   justify-content: center;
@@ -16,14 +16,18 @@
 }
 
 .controlHeroInfo {
-  height: 200px;
-  background-color: rgba(109, 109, 109, 0.589);
+  height: 300px;
+  width: 350px;
+  background-color: #EDD8C4;
   position: relative;
-  width: 500px;
-  color: white;
+  color: #C96C00;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 1rem;
+  flex-direction: column;
+  justify-content: flex-start;
+  top:400px;
+  left:30%;
+  font-size: 1.2rem;
 }
 
 .controlSection {
@@ -33,17 +37,63 @@
     font-size: 1.2rem
 }
 
+.controlSection h1 {
+  text-transform: uppercase;
+  color: #C96C00
+}
+
+.controlRow {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.controlRow1 {
+  display: flex;
+  justify-items: center;
+}
+
+.controlRow p {
+  margin-left: 1rem;
+}
+
+.controlVideo {
+  display: flex;
+  flex-direction: column;
+  background-image: url('/controlVideo.jpeg');
+  background-color: #EDD8C4;
+  padding: 1rem;
+}
+
+.controlVideo h1 {
+  text-transform: uppercase;
+}
+
+.h1Right {
+  margin-left: auto;
+  color: #C96C00
+}
+
+.controlProgram {
+  display:flex;
+  flex-direction: column;
+  padding: 3rem;
+  font-size: 1.2rem;
+  background-color: #EDD8C4;
+  height: 45rem;
+  margin-bottom: 10rem;
+}
 
 .controlCards {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
+  width: 100%;
 }
 
 .controlCard {
   margin-left: 10rem;
-  margin-right: 10rem;
-  margin-top: 5rem;
+  margin-right: 5rem;
+  margin-top: 0rem;
 }
 
 .controlCard img {
@@ -124,14 +174,9 @@
   padding: 1rem;
 }
 
-.programCardSection {
-    display: flex;
-    overflow-x: scroll;
-}
-
 .invasion {
   width: 700px;
-  align-self: center;
+  align-self: flex-start;
 }
 
 @media only screen and (max-width: 750px) {
