--- a/styles/AnimalHero.module.scss
+++ b/styles/AnimalHero.module.scss
@@ -15,7 +15,7 @@
 
 .regulationHeroInfo1 {
   height: 50px;
-  background-color: rgba(223, 213, 201, 0.589);
+  background-color: rgba(223, 213, 201, 0.048);
   position: relative;
   width: 700px;
   color: white;
@@ -28,7 +28,8 @@
 }
 .regulationHeroInfo {
   height: 70px;
-  background-color: rgba(223, 213, 201, 0.589);
+  // background-color: rgba(223, 213, 201, 0.589);
+  background-color: rgba(223, 213, 201, 0.048);
   position: relative;
   width: 700px;
   color: white;
