--- a/styles/Regulation.module.scss
+++ b/styles/Regulation.module.scss
@@ -22,7 +22,7 @@
 }
 .regulationHeroInfo1 {
   height: 50px;
-  background-color: rgba(109, 109, 109, 0.589);
+  background-color: rgba(109, 109, 109, 0.288);
   position: relative;
   width: 700px;
   color: white;
@@ -35,7 +35,8 @@
 }
 .regulationHeroInfo {
   height: 70px;
-  background-color: rgba(109, 109, 109, 0.589);
+  // background-color: rgba(109, 109, 109, 0.589);
+  background-color: rgba(109, 109, 109, 0.288);
   position: relative;
   width: 700px;
   color: white;
