fixed space in nav, changed nav to opaque

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,7 +13,7 @@
   padding: 0.5rem 1rem;
   justify-content: flex-end;
   align-items: center;
-  background-color: rgba(141, 139, 139, 0.349);
+  background-color: rgb(141, 139, 139);
   height: 6rem;
   width: 100vw;
   top: 0%;
