update Nav on Map page

--- a/styles/Map.module.scss
+++ b/styles/Map.module.scss
@@ -13,8 +13,9 @@
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
-  justify-content: center;
   align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .regulationHeroInfo1 {
@@ -29,6 +30,7 @@
   font-family: "Oswald", sans-serif;
   font-size: xx-large;
   font-style: inherit;
+  margin-top: 30%;
 }
 .regulationHeroInfo {
   height: 70px;
