--- a/styles/Animals.module.css
+++ b/styles/Animals.module.css
@@ -206,7 +206,7 @@
   /* left: 15%; */
 }
 .containerAll {
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%;
   /* margin-left: 12%; */
   flex-direction: row;
