--- a/styles/Welfare.module.css
+++ b/styles/Welfare.module.css
@@ -12,6 +12,10 @@
     font-size:1.2rem;
 }
 
+.conventionalContainer {
+    display: flex;
+}
+
 .section {
     display: flex;
     margin-bottom: 1rem;
